# fake-news-detector

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  prompts.py
backend/app/api/: routes.py
backend/app/core/: config.py  llm.py  logging.py
backend/app/graph/: build_graph.py  nodes.py  state.py
backend/app/ingest/: extract.py
backend/app/ml/: classifier.py  train.py
backend/app/ml/artifacts/: model.pkl  vectorizer.pkl
backend/app/tools/: search.py
backend/tests/: test_classifier.py  test_graph.py  test_ingest.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisTimeline.jsx  ClaimBreakdown.jsx  Icons.jsx  InputForm.jsx  SourcesPanel.jsx  VerdictCard.jsx
frontend/src/lib/: api.js
