[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Hybrid fake-news detector: a TF-IDF+LogReg ML first-pass fused with an LLM + web-evidence fact-check, behind a FastAPI/LangGraph API."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
    "ddgs>=6.0.0",
    "trafilatura>=1.12.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=2.0.7",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
